# Cargotrust-Contracts

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  QUICK_START.md  README.md  deploy.ps1  deploy.sh  jest.config.js  next.config.ts  package.json  tailwind.config.ts
.github/workflows/: contract-ci.yml
contracts/: Cargo.toml
contracts/cargotrust/: Cargo.toml
contracts/cargotrust/src/: cargo_register.rs  dispute.rs  errors.rs  escrow.rs  events.rs  lib.rs  shipment.rs  storage.rs  tests.rs  types.rs
scripts/: validate-env-examples.js
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/shipments/: route.ts
src/app/dashboard/: page.tsx
src/app/disputes/[id]/: page.tsx
src/app/shipments/[id]/: page.tsx
src/components/: EscrowCard.tsx  MilestoneTimeline.tsx  RegisterCargoForm.tsx  StatusBadge.tsx  WalletConnect.tsx
src/hooks/: useContract.ts  useShipment.ts  useWallet.ts
src/lib/: constants.ts  contract.ts  stellar.ts
src/types/: contract.ts  shipment.ts
