[package]
name = "cargotrust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "25.3.1", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "25.3.1", features = ["testutils", "alloc"] }

[features]
testutils = ["soroban-sdk/testutils"]
